# advanced-programming-qt-cpp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
chapters/: README.md  rebuild.bat  setup.tex
chapters/chapter01/: README.md  chapter01.tex
chapters/chapter01/code/: CMakeLists.txt  README.md  main.cpp  preproc.cpp
chapters/chapter01/images/: README.md
chapters/chapter02/: README.md  chapter02.tex
chapters/chapter02/_minted/: 0441603F9013239FA1A936158873ECB8.highlight.minted  080E43E87ACF2BCC5B60300F0193DEB5.highlight.minted  0BF125CEFE6B72F46DB21139A74D590F.highlight.minted  1FD7A6B85AFC42C15CB02C34A9FDC2CD.highlight.minted  2EADB27F5BA012CA22BFABB7C45DF59A.highlight.minted  30C7C281F6A3C303CFFCA706FDE87A64.highlight.minted  35B92C0D33C5D64205F83422BA842A40.highlight.minted  839D4F4D009B13B21082B1366DA21084.highlight.minted  8796BBCDF00B9226D682C0B45D50208F.highlight.minted  (+13 more)
chapters/chapter02/code/: CMakeLists.txt  README.md  c_basic_syntax.c  c_control_structures.c  c_function_example.c  c_function_simple.c  c_pointer_example.c  c_pointer_memory_example.c  c_struct_example.c  cpp_array_example.cpp  cpp_auto.cpp  cpp_auto_type_deduction.cpp  cpp_basic_syntax.cpp  cpp_basic_types.cpp  cpp_basic_types_demo.cpp  cpp_class_example.cpp  cpp_const_correctness.cpp  cpp_control_structures.cpp  cpp_function_basic.cpp  cpp_function_overload.cpp  cpp_inherit_example.cpp  cpp_inherit_rule.cpp  cpp_lambda_example.cpp  cpp_move_semantics.cpp  cpp_multi_inherit_example.cpp  cpp_operators.cpp  cpp_pointer_example.cpp  cpp_polymorphism_example.cpp  cpp_qt_example.cpp  cpp_range_for.cpp  cpp_reference_example.cpp  cpp_smart_pointer.cpp  cpp_smart_pointer_clean.cpp  cpp_smart_pointers_demo.cpp  cpp_stdarray_example.cpp  cpp_string_example.cpp  cpp_variables_constants.cpp  cpp_variables_constants_clean.cpp  cpp_vector_example.cpp
chapters/chapter02/code/homework/: CMakeLists.txt  README.md  gaussian_solver.cpp  gaussian_solver.h  homework.tex  jacobi_solver.cpp  jacobi_solver.h  linear_system.cpp  linear_system.h  lu_solver.cpp  lu_solver.h  main.cpp  matrix.cpp  matrix.h  run.bat  solver_base.h  sor_solver.cpp  sor_solver.h  vector.cpp  vector.h
chapters/chapter02/code/homework/_minted/: _1658F7F069A5F7461736E847F22A8CE9.index.minted
chapters/chapter03/: README.md  chapter03.tex
chapters/chapter03/code/: CMakeLists.txt  README.md  cpp_event_example.cpp  qobject_example.cpp  qobject_example.h  qt_bytearray_example.cpp  qt_calendarwidget_example.cpp  qt_checkbox_example.cpp  qt_combobox_example.cpp  qt_concurrent_example.cpp  qt_connect_advanced_example.cpp  qt_connect_example.cpp  qt_custom_event_example.cpp  qt_datastream_example.cpp  qt_datetime_example.cpp  qt_datetimeedit_example.cpp  qt_dialog_example.cpp  qt_dir_example.cpp  qt_doublespinbox_example.cpp  qt_drag_drop_event_example.cpp  qt_event_example.cpp  qt_event_filter_example.cpp  qt_event_handler_example.cpp  qt_event_loop_example.cpp  qt_example.cpp  qt_file_example.cpp  qt_fileinfo_example.cpp  qt_frame_example.cpp  qt_hash_example.cpp  qt_keyboard_event_example.cpp  qt_label_example.cpp  qt_lineedit_example.cpp  qt_list_example.cpp  qt_listwidget_example.cpp  qt_mainwindow_example.cpp  qt_map_example.cpp  qt_menu_example.cpp  qt_menubar_example.cpp  qt_mouse_event_example.cpp  qt_painter_example.cpp  (+31 more)
chapters/chapter04/: README.md  chapter04.tex
chapters/chapter05/: README.md  chapter05.tex
chapters/chapter05/code/: CMakeLists.txt  README.md  abstract_factory_pattern.cpp  adapter_pattern.cpp  bridge_pattern.cpp  build.bat  builder_pattern.cpp  chain_of_responsibility_pattern.cpp  clean.bat  command_pattern.cpp  composite_pattern.cpp  decorator_pattern.cpp  facade_pattern.cpp  factory_method_pattern.cpp  flyweight_pattern.cpp  interpreter_pattern.cpp  iterator_pattern.cpp  mediator_pattern.cpp  memento_pattern.cpp  observer_pattern.cpp  prototype_pattern.cpp  proxy_pattern.cpp  run.bat  singleton_pattern.cpp  state_pattern.cpp  strategy_pattern.cpp  template_method_pattern.cpp  visitor_pattern.cpp
chapters/chapter06/: README.md  chapter06.tex
chapters/chapter07/: README.md  chapter07.tex
chapters/chapter07/code/: CMakeLists.txt  README.md  boost_accumulators_examples.cpp  boost_eigen_integration.cpp  boost_geometry.cpp  boost_interval.cpp  boost_math.cpp  boost_math_advanced.cpp  boost_math_comprehensive.cpp  boost_math_special_functions.cpp  boost_multiprecision.cpp  boost_multiprecision_types.cpp  boost_random.cpp  boost_statistics.cpp  boost_units.cpp  build.bat  eigen_advanced_operations.cpp  eigen_applications.cpp  eigen_array_operations.cpp  eigen_basic.cpp  eigen_best_practices.cpp  eigen_block_operations.cpp  eigen_comprehensive_usage.cpp  eigen_data_types.cpp  eigen_debugging.cpp  eigen_decomposition_comparison.cpp  eigen_eigenvalues.cpp  eigen_element_access.cpp  eigen_expression_templates.cpp  eigen_geometry.cpp  eigen_linear_systems.cpp  eigen_map_stl.cpp  eigen_matrix_arithmetic.cpp  eigen_matrix_creation.cpp  eigen_matrix_ops.cpp  eigen_mkl_integration.cpp  eigen_norm_statistics.cpp  eigen_numerical_stability.cpp  eigen_performance_optimization.cpp  eigen_simple_applications.cpp  (+28 more)
chapters/chapter07/example/: CMakeLists.txt  README.md  REFACTORING.md  _1A79A4D60DE6718E8E5B326E338AE533.data.minted  _1A79A4D60DE6718E8E5B326E338AE533.message.minted  example.tex  mt_forward_solver.cpp  mt_forward_solver.h  mt_frequency_generator.cpp  mt_frequency_generator.h  mt_inversion_core.cpp  mt_inversion_core.h  mt_inversion_gui.cpp  mt_inversion_gui.h  mt_jacobian_calculator.cpp  mt_jacobian_calculator.h  mt_model.h  mt_optimizer.cpp  mt_optimizer.h  mt_regularization.cpp  mt_regularization.h  mt_theory.tex
chapters/chapter07/example/_minted/: 997FD283B9D88BB40C439BFB65DC6260.highlight.minted  _1A79A4D60DE6718E8E5B326E338AE533.index.minted
(+273 files in other folders)
